--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,15 @@
     <groupId>com.md.endava.ocp</groupId>
     <artifactId>OCP-CERTIFICATION</artifactId>
     <version>1.0-SNAPSHOT</version>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.5</version>
+        </dependency>
+    </dependencies>
+
     <build>
         <plugins>
             <plugin>
